compiler/src/test/resources/amyc/typer/failing/ArithError5.amy
module ArithError5
  - ()
end ArithError5
